// ============================================
// Generador de Portales — Prisma Schema
// ============================================
// Ubicación final: apps/api/prisma/schema.prisma
// Generar cliente: npx prisma generate
// Crear migración: npx prisma migrate dev --name <nombre>
// ============================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ============================================
// AUTENTICACIÓN Y USUARIOS
// ============================================

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  password      String    // Hash bcrypt
  firstName     String    @map("first_name")
  lastName      String    @map("last_name")
  avatar        String?   // URL en MinIO
  isActive      Boolean   @default(true) @map("is_active")
  lastLoginAt   DateTime? @map("last_login_at")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  // Relaciones
  companyUsers  CompanyUser[]
  projectUsers  ProjectUser[]
  mediaFiles    MediaFile[]
  auditLogs     AuditLog[]

  @@map("users")
}

model Role {
  id          String   @id @default(cuid())
  name        String   @unique   // "admin", "developer", "editor"
  displayName String   @map("display_name") // "Administrador", "Desarrollador", "Editor"
  description String?
  permissions Json     // Permisos como JSONB: { "projects.create": true, "templates.edit": true, ... }
  isSystem    Boolean  @default(false) @map("is_system") // Roles que no se pueden eliminar
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relaciones
  companyUsers CompanyUser[]

  @@map("roles")
}

// ============================================
// EMPRESAS (Multi-tenant)
// ============================================

model Company {
  id          String   @id @default(cuid())
  name        String
  slug        String   @unique
  logo        String?  // URL en MinIO
  description String?
  isRoot      Boolean  @default(false) @map("is_root") // true = *systemroot
  isActive    Boolean  @default(true) @map("is_active")
  settings    Json?    // Configuraciones de empresa como JSONB
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relaciones
  companyUsers CompanyUser[]
  projects     Project[]
  templates    Template[]     // Templates propios de la empresa
  mediaFiles   MediaFile[]

  @@map("companies")
}

// Relación Usuario ↔ Empresa (muchos a muchos con rol)
model CompanyUser {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  companyId String   @map("company_id")
  roleId    String   @map("role_id")
  isActive  Boolean  @default(true) @map("is_active")
  joinedAt  DateTime @default(now()) @map("joined_at")

  // Relaciones
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  company Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
  role    Role    @relation(fields: [roleId], references: [id])

  @@unique([userId, companyId])
  @@map("company_users")
}

// ============================================
// PROYECTOS (Portales)
// ============================================

model Project {
  id          String        @id @default(cuid())
  name        String
  slug        String
  description String?
  status      ProjectStatus @default(DRAFT)
  companyId   String        @map("company_id")
  templateId  String?       @map("template_id") // Template base usado
  settings    Json?         // Configuraciones del portal como JSONB
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")
  publishedAt DateTime?     @map("published_at")

  // Relaciones
  company      Company       @relation(fields: [companyId], references: [id], onDelete: Cascade)
  template     Template?     @relation(fields: [templateId], references: [id])
  pages        Page[]
  projectUsers ProjectUser[]
  builds       Build[]
  mediaFiles   MediaFile[]

  @@unique([companyId, slug])
  @@map("projects")
}

enum ProjectStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

// Relación Usuario ↔ Proyecto (asignación a proyectos específicos)
model ProjectUser {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  projectId String   @map("project_id")
  canEdit   Boolean  @default(true) @map("can_edit")
  assignedAt DateTime @default(now()) @map("assigned_at")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([userId, projectId])
  @@map("project_users")
}

// ============================================
// PÁGINAS, SECCIONES, COMPONENTES
// ============================================

model Page {
  id          String  @id @default(cuid())
  projectId   String  @map("project_id")
  name        String
  slug        String  // "/", "/nosotros", "/servicios"
  title       String  // SEO title
  description String? // SEO meta description
  layout      String  @default("default") // "default", "fullwidth", "sidebar"
  isHomepage  Boolean @default(false) @map("is_homepage")
  isPublished Boolean @default(false) @map("is_published")
  showInNav   Boolean @default(true) @map("show_in_nav")
  order       Int     @default(0)

  // El contenido completo de la página como JSONB
  // Contiene el array de Sections con sus Components (schema-componentes.md)
  content     Json    // Section[] con componentes anidados

  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relaciones
  project     Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  versions    PageVersion[]

  @@unique([projectId, slug])
  @@map("pages")
}

// Historial de versiones de una página
model PageVersion {
  id        String   @id @default(cuid())
  pageId    String   @map("page_id")
  version   Int
  content   Json     // Snapshot del contenido de la página
  createdBy String?  @map("created_by") // userId
  createdAt DateTime @default(now()) @map("created_at")
  comment   String?  // Descripción del cambio

  page Page @relation(fields: [pageId], references: [id], onDelete: Cascade)

  @@unique([pageId, version])
  @@map("page_versions")
}

// ============================================
// TEMPLATES
// ============================================

model Template {
  id          String         @id @default(cuid())
  name        String
  slug        String         @unique
  description String?
  thumbnail   String?        // URL en MinIO
  category    String?        // "corporativo", "landing", "blog", "ecommerce"
  tags        String[]       // ["responsive", "moderno", "minimalista"]
  scope       TemplateScope  @default(COMPANY)
  companyId   String?        @map("company_id") // null = global (*systemroot)
  isActive    Boolean        @default(true) @map("is_active")

  // Contenido del template: estructura completa de páginas
  content     Json           // PortalState completo sin datos específicos

  // Estilos globales del template
  globalStyles Json?         @map("global_styles") // GlobalStyles

  createdAt   DateTime       @default(now()) @map("created_at")
  updatedAt   DateTime       @updatedAt @map("updated_at")

  // Relaciones
  company     Company?       @relation(fields: [companyId], references: [id])
  projects    Project[]      // Proyectos que usan este template

  @@map("templates")
}

enum TemplateScope {
  GLOBAL    // Visible para todas las empresas (creado por *systemroot)
  COMPANY   // Solo visible para la empresa que lo creó
}

// ============================================
// ARCHIVOS / MEDIA
// ============================================

model MediaFile {
  id          String    @id @default(cuid())
  filename    String    // Nombre original
  storagePath String    @map("storage_path") // Ruta en MinIO
  mimeType    String    @map("mime_type")
  size        Int       // Bytes
  width       Int?      // Solo imágenes
  height      Int?      // Solo imágenes
  alt         String?   // Texto alternativo
  category    String?   // "image", "video", "document"

  // Thumbnails y variantes procesadas por Sharp
  variants    Json?     // { "thumbnail": "path", "webp": "path", "avif": "path" }

  // Propietario
  companyId   String    @map("company_id")
  projectId   String?   @map("project_id")
  uploadedBy  String    @map("uploaded_by")

  createdAt   DateTime  @default(now()) @map("created_at")

  // Relaciones
  company     Company   @relation(fields: [companyId], references: [id], onDelete: Cascade)
  project     Project?  @relation(fields: [projectId], references: [id])
  uploader    User      @relation(fields: [uploadedBy], references: [id])

  @@map("media_files")
}

// ============================================
// BUILDS (Generaciones de portales)
// ============================================

model Build {
  id          String      @id @default(cuid())
  projectId   String      @map("project_id")
  version     Int
  status      BuildStatus @default(PENDING)
  outputPath  String?     @map("output_path") // Ruta al build en MinIO/filesystem
  buildLog    String?     @map("build_log")   // Log del proceso de generación
  duration    Int?        // Duración en ms
  triggeredBy String?     @map("triggered_by") // userId
  createdAt   DateTime    @default(now()) @map("created_at")
  completedAt DateTime?   @map("completed_at")

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@map("builds")
}

enum BuildStatus {
  PENDING
  BUILDING
  SUCCESS
  FAILED
}

// ============================================
// AUDITORÍA
// ============================================

model AuditLog {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  action    String   // "project.create", "page.update", "template.delete", etc.
  entity    String   // "project", "page", "template", "user"
  entityId  String   @map("entity_id")
  details   Json?    // Detalles adicionales del cambio
  ipAddress String?  @map("ip_address")
  createdAt DateTime @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id])

  @@index([entity, entityId])
  @@index([userId])
  @@index([createdAt])
  @@map("audit_logs")
}
